# backups

./: .gitignore  Cargo.toml  README.md  build-deploy-client.sh  build-deploy-server.bat
client/: .gitignore  Cargo.toml  config.toml
client/src/: backup.rs  backup_client.rs  backup_config.rs  backup_task.rs  backups.rs  config.rs  create_backup_task.rs  endpoint.rs  history.rs  load_certificates.rs  logger.rs  main.rs  make_backup.rs  scheduler_config.rs  service.rs  tls.rs
client/src/backups/: backup_history.rs  backup_types.rs  file_utils.rs
client/src/backups/backup_history/: backup_history.rs  history.rs  service_backup_history.rs
client/src/backups/backup_types/: docker_postgres.rs
client/src/backups/backup_types/docker_postgres/: backup.rs
client/src/config/: certificate.rs  program_config.rs  raw_config.rs  tls_config.rs
client/src/endpoint/: tls_server.rs
client/src/history/: history_items.rs
client/src/service/: docker_postgres.rs
client/src/tls/: tls_client.rs
crates/backup-receiver/: Cargo.toml
crates/backup-receiver/src/: cleanup.rs  config.rs  context.rs  context_logger.rs  lib.rs  main.rs  receiver.rs
crates/backup-receiver/src/receiver/: handle_client.rs  mod.rs
crates/backup-receiver/tests/: cleanup.rs  handle_client.rs  receiver.rs
crates/backup-receiver/tests/common/: mod.rs
crates/backup-sender/: Cargo.toml
crates/backup-sender/src/: config.rs  context.rs  endpoint.rs  history.rs  lib.rs  main.rs
crates/backup-sender/src/endpoint/: backup_receiver.rs  mod.rs
crates/backup-sender/src/source/: docker_postgres.rs  folder_tar.rs  mock.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: cadance.rs  cadence.rs  certificates.rs  endian.rs  failure.rs  lib.rs  logger.rs  metadata.rs  metadata_string.rs  response.rs  test.rs
crates/shared/tests/: cadance.rs  endian.rs  metadata.rs
server/: .gitignore  Cargo.toml  config.toml
server/src/: certificate.rs  cleanup.rs  config.rs  config_types.rs  handler.rs  load_certificates.rs  logger.rs  main.rs  payload.rs  server_config.rs  socket.rs
server/src/config/: backup_config.rs  certificate.rs  program_config.rs  raw_config.rs  tls_config.rs
server/src/socket/: backup_config.rs  create_socket.rs  decrypt_file.rs  handle_file.rs  is_saved_file_valid.rs  payload.rs  payload_config.rs  save_file.rs  valid_config.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/client/: Cargo.toml
src/client/src/: main.rs
src/client/src/config/: backup.rs  mod.rs
src/client/src/endpoint/: mod.rs  tls_server.rs
src/client/src/history/: history_items.rs  mod.rs
src/client/src/service/: docker_postgres.rs  dummy.rs  mod.rs
src/server/: .gitignore  Cargo.toml
src/server/src/: ip_list.rs  main.rs  server_config.rs
src/server/src/server/: accept.rs  cleanup.rs  handle.rs  mod.rs
src/server/src/tests/: client.rs  ip_list_backed.rs  ip_list_unbacked.rs  mod.rs  pki.rs  trusted_client_cert.rs  untrusted_client_cert.rs
src/shared/: Cargo.toml
src/shared/src/: certificates.rs  lib.rs  metadata.rs
tls/: README.md  config.json  csr_ca.json  csr_receiver.json  csr_sender.json
