[workspace]
resolver = "2"
members = ["src/*"]

[workspace.dependencies]
blake3 = { version = "1.5", features = ["serde"] }
chrono = "0.4"
fern = { version = "0.6", features = ["date-based"] }
log = "0.4"
rustls = { version = "0.23", default-features = false, features = [
	"std",
	"tls12",
	"log",
	"ring",
] }
rustls-pemfile = "2.1"
rustls-pki-types = "1.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"

shared = { path = "src/shared" }

[profile.release]
strip = true
