[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Trent Shailer"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# TLS
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-pemfile = "2.1"
rustls-pki-types = "1.8"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2.0"

# Timestamp
chrono = "0.4"

# Workspace dependencies
shared = { path = "crates/shared" }

# Generating certificates for testing
rcgen = { version = "0.13" }

[workspace.lints.rust]
"deprecated_in_future" = "warn"
"missing_docs" = "warn"
"rust_2018_idioms" = "warn"
"unused_qualifications" = "warn"

[workspace.lints.clippy]
"std_instead_of_core" = "warn"

"cast_lossless" = "warn"
"inconsistent_struct_constructor" = "warn"
"unnecessary_self_imports" = "warn"
"use_self" = "warn"

"clone_on_ref_ptr" = "warn"
"default_trait_access" = "warn"
"todo" = "warn"

"as_conversions" = "warn"
"index_slicing" = "warn"
