[package]
name = "backups-client"
version = "1.0.0"
edition = "2021"

[dependencies]
blake3 = { version = "1.5.0", features = ["serde"] }
chrono = "0.4.31"
fern = { version = "0.6.2", features = ["date-based"] }
log = "0.4.20"
owo-colors = "4.0.0"
rustls = "0.22.2"
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.0.1"
serde = { version = "1.0.193", features = ["derive"] }
shared = { path = "../shared" }
thiserror = "1.0.50"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.25.0"
tokio-util = { version = "0.7.10", features = ["rt"] }
toml = "0.8.8"
