[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
thiserror = "1.0"
pretty_env_logger = "0.5"
log = "0.4"
anyhow = "1.0.75"
regex = "1.10.2"
tokio-rustls = "0.25.0"
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.0.0"
rustls = "0.22.0"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
age = { version = "0.9.2", features = ["async"] }
blake3 = { version = "1.5.0", features = ["serde"] }
notify-rust = "4.10.0"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.31"
