[package]
name = "backups-server"
version = "1.0.0"
edition = "2021"

[dependencies]
blake3 = { version = "1.5.0", features = ["serde"] }
chrono = "0.4.31"
fern = { version = "0.6.2", features = ["date-based"] }
futures-rustls = "0.25.1"
log = "0.4.20"
notify-rust = "4.10.0"
owo-colors = "4.0.0"
regex = "1.10.2"
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.0.0"
serde = { version = "1.0.193", features = ["derive"] }
smol = "2.0.0"
thiserror = "1.0.50"
toml = "0.8.8"
