[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
blake3 = { version = "1.5.0", features = ["serde"] }
rustls = "0.22.4"
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.1.0"
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"
