[package]
name = "backup-sender"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Allocator
mimalloc = { workspace = true }

# Logging
tracing = { workspace = true }

# TLS
rustls = { workspace = true }

# Config
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Shared
shared = { workspace = true }

[dev-dependencies]
shared = { workspace = true, features = ["test"] }
rcgen = { workspace = true }


[features]
mimalloc_debug = ["mimalloc/debug"]

[lints]
workspace = true
