[package]
name = "backup-sender"
version = "0.2.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Logging
tracing = { workspace = true }

# TLS
rustls = { workspace = true, default-features = true }

# Config
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Shared
shared = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
shared = { workspace = true, features = ["test"] }

[lints]
workspace = true
