[package]
name = "shared"
version = "0.4.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# TLS
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }

# (De)serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

# Generating certificates for testing
rcgen = { workspace = true, optional = true }

[features]
test = ["rcgen"]

[lints]
workspace = true
