[package]
name = "backups-server"
version = "5.1.1"
edition = "2021"

[dependencies]
shared = { workspace = true }

chrono = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

notify-rust = "4.11"


[dev-dependencies]
rcgen = { version = "0.13" }
